syntax = "proto3";

package User;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {};
  rpc UserProfile (UserProfileRequest) returns (UserProfileResponse) {};
  rpc ListUsers (ListUsersRequest) returns (stream ListUsersResponse) {};
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {};
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {};
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message UserProfileRequest {
  string user_id = 1;
}

message UserProfileResponse {
  User user = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  User user_id = 1;
}

message DeleteUserResponse {
  User user_id = 1;
}

message User {
  string id = 1;
  string fullName = 2;
  string userName = 3;
  string email = 4;
  string password = 5;
  string photo = 6;
}
